fixing blurred logo

--- a/Css/style.css
+++ b/Css/style.css
@@ -509,7 +509,7 @@ a:hover{
         margin-top: 4rem;
     }
     .logo, .footer-logo{
-        width: 70%;
+        width: 60%;
     }
     .nav-link{
         padding: 1rem;
